clusters/prod/releases/dms/prod/istio-configs/virtual-services/dms-api-gateway-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dms-api-gateway-service-internal
  namespace: dms-prod
spec:
  hosts:
    - "dms.prod.lvad.lvfs.net"
  gateways:
    - istio-ingress-internal/default-gateway-prod-internal
  http:
    # Route API calls from frontend to API Gateway
    - match:
        - uri:
            prefix: "/api"
      route:
        - destination:
            host: dms-api-gateway-service.dms-prod.svc.cluster.local
            port:
              number: 8080
      timeout: 120s
      retries:
        attempts: 3
        perTryTimeout: 10s
      corsPolicy:
        allowOrigins:
          - exact: https://dms.prod.lvad.lvfs.net
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PATCH
          - PUT
          - DELETE
        allowHeaders:
          - Authorization
          - Content-Type
          - Accept
          - Origin
          - User-Agent
        allowCredentials: true
